force-app/main/default/objects/Employee_Profit_Center__c/Employee_Profit_Center__c.object-meta.xml
<CustomObject>
    <label>Employee Profit Center</label>
    <nameField>
        <label>Employee Profit Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Profit Centers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>