force-app/main/default/objects/Employee_Profit_Center__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>An employee can have multiple Profit centres associated with it(This field was created for NPL MA).</description>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Profit Centers</relationshipLabel>
    <relationshipName>Employee_Profit_Centers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>