force-app/main/default/objects/Employee_Profit_Center__c/fields/ProfitCenterDescription__c.field-meta.xml
<CustomField>
    <fullName>ProfitCenterDescription__c</fullName>
    <description>Profit centre description(This field was created for NPL MA).</description>
    <formula>Profit_Center__r.ProfitCenterDescription__c</formula>
    <label>Profit Center Description</label>
    <type>Text</type>
</CustomField>